# Study

./: CMakeLists.txt
dependency/bgfx/lib/: bimg.lib  bimg_decode.lib  bx.lib
src/: application.cpp  application.h  main.cpp  player.h
